# MechDesignAgents

./: .gitignore  .gitmessage  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agents.py  commit-log.md  environment.yml  main.py  plate_with_hole.step  pyproject.toml  requirements.txt  setup.py  streamlitapp.py
Langchain_AutogenTest/: RAG_code.py  vectorstore_generator.py
NewCAD/: bottle.dxf  bottle.step  bottle.stl  cube.dxf  cube.step  cube.stl  cylinder.step  cylinder_minus_sphere.dxf  cylinder_minus_sphere.step  cylinder_minus_sphere.stl  extruded_solid.step  sphere.dxf  sphere.step  sphere.stl  sphere_cylinder.dxf  sphere_cylinder.step  sphere_cylinder.stl
NewCADs/: bar_with_wheel.dxf  bar_with_wheel.py  bar_with_wheel.step  bar_with_wheel.stl  filleted_box.dxf  filleted_box.py  filleted_box.step  filleted_box.stl  filleted_box_with_cylinder.dxf  filleted_box_with_cylinder.py  filleted_box_with_cylinder.step  filleted_box_with_cylinder.stl  filleted_box_with_cylinder_and_sphere.dxf  filleted_box_with_cylinder_and_sphere.py  filleted_box_with_cylinder_and_sphere.step  filleted_box_with_cylinder_and_sphere.stl  table.dxf  table.py  table.step  table.stl
chroma_db/: chroma.sqlite3
data/: ANK_CAD.stl  Examples_small.md
engdrawingagents/: archi_drawing_agents.py  azure_drawing_agent.py  groq_drawing_agents.py  groq_drawing_agents_minimal.py  langchain_rag.py
forfrontend/: agentcall.py  fastcheck.py
mechdesignagents/: __init__.py  agentic_chats.py  agents.py  agents_v2.py  agents_v3.py  app.py  chat_with_cadcoder.py  chat_with_designer_expert.py  (+22 more)
(+63 files in other folders)
